# cONcat

./: README.md  run_in_parallel.sh
Code_Alex/: Cargo.toml
Code_Alex/src/: main.rs  structs.rs
Input_processing/: Remove_UMIs_Erik.py
Simulation/: Expected_fragments_py.csv  Plot_data.py  Simulate_from_error_profile.py  Simulate_random_reads.py  Simulate_reads.py  compare_to_sim.py
Test_Simulation/: compare_to_sim.py  config.json  error_reads.csv  parse_analyses.py  plot_new.py  snakefile
Test_Simulation/.snakemake/metadata/: L2hvbWUvYWxleGFuZGVycGV0cmkvUHJvamVjdDMvU2ltdWxhdGlvblJlc3VsdHMvU2ltdWxhdGlvbl9SZXN1bHRzL0tyaXN0b2ZmZXJfcmVhZG91dA==  L2hvbWUvYWxleGFuZGVycGV0cmkvUHJvamVjdDMvU2ltdWxhdGlvblJlc3VsdHMvU2ltdWxhdGlvbl9SZXN1bHRzL3J1c3Rfb3V0  L2hvbWUvYWxleGFuZGVycGV0cmkvUHJvamVjdDMvU2ltdWxhdGlvblJlc3VsdHMvU2ltdWxhdGlvbl9SZXN1bHRzL3NpbXVsYXRlZC5mYXN0cQ==  L2hvbWUvYWxleGFuZGVycGV0cmkvUHJvamVjdDMvU2ltdWxhdGlvblJlc3VsdHMvU2ltdWxhdGlvbl9SZXN1bHRzLy9zaW11bGF0ZWQuZmFzdHE=
Test_diff_fragments/: config.json  get_frag_similarity.py  sim_fragments.py  snakefile
cONcat_Code/: Cargo.toml
cONcat_Code/src/: main.rs  side_functions.rs  structs.rs
