[package]
name = "LigandFrags2"
version = "0.1.0"
edition = "2021"


[dependencies]
edlib_rs = "0.1.2"
bio = "1"
bio-seq = "0.10.0"
buf_redux = "0.2"
rustc-hash = "2.0.0"
csv = "1.3.0"
itertools = "0.11.0"
nohash-hasher = "0.2.0"
clap = { version = "4.4.3", features = ["derive","cargo"] }
clap-cargo = "0.12.0"
rayon = "1.7.0"